@@ -1,6 +1,14 @@
 ========================================
 
 Revision 4:
+  * Added countries_for_select method, which takes parameters for a resulting
+    array for use in a select tag
+    
+    countries_for_select('a2', 'name')   # yields something like [ ['AU', 'Australia'] ...lots more... ]
+
+========================================
+
+Revision 4:
   * Added CHANGELOG
   * Added support for methods of the form find_ATTRIBUTE_by_ATTRIBUTE such as:
     
